k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: financas-api
  name: financas-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: financas-api
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: financas-api
    spec:
      containers:
        - image: image-registry.openshift-image-registry.svc:5000/financas/financas-api:latest
          name: financas-api
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8443
              protocol: TCP
          resources:
            limits:
              cpu: "0.75"
              memory: 512Mi
            requests:
              cpu: "0.50"
              memory: 256Mi
