k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: financas-api
  name: financas-api
spec:
  host: financas-api-financas.apps-crc.testing
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
  to:
    kind: Service
    name: financas-api
    weight: 100
  wildcardPolicy: None
